# typeSolver

./: CHANGELOG.md  cabal.project  typeDataStuff.cabal
app/: Main.hs
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  up-to-date
newdist/dante/cache/: compiler  elaborated-plan  improved-plan  plan.json  source-hashes
