cabal-version:      2.4
name:               typeDataStuff
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:

-- The package author(s).
-- author:
maintainer:         jekensik17@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md


executable typeDataStuff
    main-is:          Main.hs
--    import: common-extensions
    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    ghc-options:
        -ddump-to-file
        -ddump-tc-trace
        -fprint-typechecker-elaboration
    default-extensions:
      TypeFamilies
      ViewPatterns
      TypeFamilyDependencies
      MultiParamTypeClasses
      FunctionalDependencies
      DataKinds
      PolyKinds
      ScopedTypeVariables
      InstanceSigs
      ExistentialQuantification
      StandaloneKindSignatures
      QuantifiedConstraints
      UndecidableSuperClasses
      AllowAmbiguousTypes
      UndecidableInstances
      FlexibleInstances
      RankNTypes
      NoMonomorphismRestriction
      ImpredicativeTypes
      ConstraintKinds
      FlexibleContexts
      TypeOperators
      MultiWayIf
      LambdaCase
      ImportQualifiedPost
      MonadComprehensions
      TypeData
      GADTs
      TypeApplications
    build-depends: base
    hs-source-dirs:   app
    default-language: Haskell2010
